# llserver_ecui_houbolt

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.txt  Makefile  README.md  TRACING.md  TXV_ECUI_LLSERVER  TXV_ECUI_LLSERVER.cbp  analyze_traces.py  cmake_install.cmake  config.json  configPath.txt  config_Franz.json  config_Franz_test.json  config_GSS.json  config_large_teststand.json  config_small_oxfill.json  config_small_teststand.json  docker-compose.yml  doxygen_config  ecui-llserver-franz.service  ecui-llserver-gss.service  ecui-llserver-large-teststand.service  ecui-llserver-small-oxfill.service  ecui-llserver-small-teststand.service  ecui-llserver.service  franz_config.json  install-franz.sh  install-gss.sh  install-large-teststand.sh  install-small-oxfill.sh  install-small-teststand.sh  install.sh  llserver_backlog_analysis_simple.xml  llserver_ecui_houbolt  llserver_ecui_houbolt.cbp  (+9 more)
.github/workflows/: ci.yml  gtest.yml
doc/: space_team_custom.css
doc/media/: txvAscii.txt
img/: logo.txt  logo_short.txt  txvLogo.txt  txvLogoSquashed.txt
include/: Config.h  Config_new.h  ControlLoop.h  DataFilter.h  Debug.h  Dispatcher.h  EcuiSocket.h  EventManager.h  HcpCommands.h  HcpManager.h  I2C.h  InfluxInterface.h  LLController.h  LLController.h.old  LLInterface.h  Logging.h  Mapping.h  NewSocket.h  Peripherie.h  PyScriptExecutor.h  SequenceManager.h  Serial.h  Singleton.h  Socket.h  State.h  StateController.h  Timer.h  TmPoE.h  WarnLight.h  WatchDog.h  WebSocket.h  WebSocketClient.h  WebSocketClient.h.old  common.h  config.h  config.hpp  config_old.h  control_flag.h  control_flags.h  control_loop_worker.hpp  (+5 more)
include/can/: ADC16.h  ADC16Single.h  ADC24.h  CANDriver.h  CANDriverKvaser.h  CANDriverSocketCAN.h  CANDriverUDP.h  CANManager.h  CANMapping.h  CanKvaserReceiveThread.h  Channel.h  CommonKvaser.h  Control.h  DATA32.h  DigitalOut.h  IMU.h  Node.h  Overpressure.h  PIControl.h  PneumaticValve.h  Rocket.h  Servo.h
include/can/channels/: ADC16.h  ADC16Single.h  ADC24.h  CANMonitor.h  Channel.h  Control.h  DATA32.h  DigitalOut.h  IMU.h  PIControl.h  PneumaticValve.h  Rocket.h  Servo.h
include/driver/: PythonController.h  Serial.h  Socket.h  SocketOld.h  SocketServer.h  TmPoE.h  UDPSocket.h  WarnLight.h
include/drivers/: I2C.h  JSONMapping.h  Serial.h  Socket.h  SocketOld.h  SocketServer.h  TmPoE.h  WarnLight.h
include/hcp/: HcpCommands.h  HcpManager.h  HcpMapping.h
include/logging/: DataLogger.h  InfluxDbLogger.h  InfluxDbSendThread.h  InfluxDbWriter.h  InfluxDbWriter.hpp  Logger.h  MessageLogger.h  influxDb.h
include/peripherie/: Frame.h  input_message.hpp  output_message.hpp
include/peripherie/can/: CANHelper.h  CANSocket.h  channel.h  config.h  helper.h  node.h  node.hpp  socket.h
include/peripherie/can/channel/: adc16.h  generic.h  servo.h
include/peripherie/can/channel_type/: adc16.h  adc16_single.h  adc24.h  control.h  digital_out.h  generic.h  imu.h  pneumatic_valve.h  rocket.h  servo.h
include/server/: Controller.h  Dispatcher.h  Queue.h  Socket.h  SocketClient.h
include/utility/: Config.h  Debug.h  FileSystemAbstraction.h  IntervalChecker.hpp  JSONMapping.h  Logger.h  Logging.h  LoopTimer.hpp  RingBuffer.h  Singleton.h  Timer.h  WebSocketClient.h  json.h  json.hpp  logger.hpp  ring_buffer.hpp  severity.hpp  utils.h
include/web/: input_message.hpp  output_message.hpp
influxCsvExport/: main
logs/: placeholder
mapping/: Franz.json  FranzMapping.json  FranzlMapping.json  hcpMapping.json  hcpMappingECUI.json  hcpMappingLargeTeststand.json  hcpMappingSmallOxfill.json  hcpMappingSmallTeststand.json  hcpMappingTemp.json  hcpMappingoldteststand.json  mapping.json  test.json  uHoubolt.json  uHouboltMapping.json
sample_config/: config.json  mapping.json  sample_sequence.json
script/: thrust_v1.9.plt
scripts/: ECUIEmulator.py  plot.sh  pressure_v1.8.plt  pressure_v1.9.plt  temp_v1.8.plt  temp_v1.9.plt  thrust_v1.8.plt  thrust_v1.9.plt
scripts/plots/: analysis_summary.txt
src/: Config.cpp  Config_new.cpp  ControlLoop.cpp  DataFilter.cpp  Debug.cpp  Dispatcher.cpp  EcuiSocket.cpp  EventManager.cpp  HcpCommands.cpp  HcpManager.cpp  I2C.cpp  InfluxInterface.cpp  LLController.cpp  LLController.cpp.old  LLInterface.cpp  Mapping.cpp  NewSocket.cpp  Peripherie.cpp  SequenceManager.cpp  Serial.cpp  Serial.h  Socket.cpp  SocketServer.cpp  StateController.cpp  Timer.cpp  TmPoE.cpp  WarnLight.cpp  WatchDog.cpp  WebSocketClient.cpp  control_loop_worker.cpp  main.cpp  peripherie_worker.cpp  utils.cpp
src/can/: ADC16.cpp  ADC16Single.cpp  ADC24.cpp  CANDriver.cpp  CANDriverKvaser.cpp  CANDriverSocketCAN.cpp  CANDriverUDP.cpp  CANManager.cpp  CANMapping.cpp  CanKvaserReceiveThread.cpp  Channel.cpp  Control.cpp  DATA32.cpp  DigitalOut.cpp  IMU.cpp  Node.cpp  Overpressure.cpp  PIControl.cpp  PneumaticValve.cpp  Rocket.cpp  Servo.cpp
src/can/channels/: ADC16.cpp  ADC16Single.cpp  ADC24.cpp  CANMonitor.cpp  Channel.cpp  Control.cpp  DATA32.cpp  DigitalOut.cpp  IMU.cpp  PIControl.cpp  PneumaticValve.cpp  Rocket.cpp  Servo.cpp
src/drivers/: I2C.cpp  JSONMapping.cpp  PythonController.cpp  Serial.cpp  Socket.cpp  SocketOld.cpp  SocketServer.cpp  TmPoE.cpp  UDPSocket.cpp  WarnLight.cpp
src/hcp/: HcpCommands.cpp  HcpManager.cpp  HcpMapping.cpp
src/logging/: InfluxDbLogger.cpp  InfluxDbSendThread.cpp  InfluxDbWriter.cpp  Logger.cpp  influxDb.c
src/peripherie/can/: CANHelper.cpp  CANSocket.cpp  config.cpp  node.cpp  socket.cpp
src/peripherie/can/channel/: adc16.cpp  generic.cpp
src/server/: Controller.cpp  Dispatcher.cpp  Queue.cpp  Socket.cpp  SocketClient.cpp
src/utility/: Config.cpp  Debug.cpp  FileSystemAbstraction.cpp  IntervalChecker.cpp  JSONMapping.cpp  LoopTimer.cpp  Timer.cpp  WatchDog.cpp  WebSocketClient.cpp  utils.cpp
test/: ExampleTests.cpp  TestRingBuffer.cpp  TestWebSocket.cpp  main.cpp  serialTest.cpp
tests/: CMakeLists.txt  SequenceManagerTest.cpp
tests/data/: SequenceManagerTestData.h
trace/: tracepoint.tp  tracepoint_impl.cpp  tracepoint_static.cpp  tracepoint_wrapper.h
(+10 files in other folders)
